# Momentos

./: README.md  requirements.md  system-prompt.md
apps/api-gateway/: Dockerfile  go.mod  main.go
apps/api-gateway/handlers/: handlers.go
apps/api-gateway/middleware/: auth.go
apps/api-gateway/models/: models.go
apps/api-gateway/queue/: redis.go
apps/web-client/: .dockerignore  Dockerfile  package.json
apps/web-client/app/: layout.js  page.js
services/ai-synthesis/: Dockerfile  config.py  main.py  requirements.txt
services/ai-synthesis/routers/: synthesis.py
services/ai-synthesis/services/: layout.py  llm.py  tts.py  vectors.py
services/media-engine/: Cargo.toml  Dockerfile
services/media-engine/src/: audio.rs  main.rs  models.rs  scraper.rs
shared/: .env  .env.example  docker-compose.yml
